<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_yoga">

    <fragment
        android:id="@+id/navigation_yoga"
        android:name="com.example.wellbeingtracker.ui.yoga.YogaFragment"
        android:label="@string/yoga"
        tools:layout="@layout/fragment_yoga" />

    <fragment
        android:id="@+id/navigation_calories"
        android:name="com.example.wellbeingtracker.ui.calories.CaloriesFragment"
        android:label="@string/title_calories"
        tools:layout="@layout/fragment_calories" />

    <fragment
        android:id="@+id/navigation_exercises"
        android:name="com.example.wellbeingtracker.ui.advice.AdviceFragment"
        android:label="@string/advice"
        tools:layout="@layout/fragment_advice" />
</navigation>