<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:id="@+id/caloriesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_amount_of_calories"
            android:textSize="20sp"/>

        <EditText
            android:layout_below="@+id/caloriesTextView"
            android:id="@+id/caloriesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginRight="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:ems="10" />


        <Button
            android:id="@+id/addCaloriesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_below="@+id/caloriesEditText"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_margin="20dp"
            android:id="@+id/caloriesInsertedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/addCaloriesButton"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollHorizontally="false" />
    <TextView
        android:layout_above="@+id/delete_all"
        android:text="@string/total_calories"
        android:layout_marginRight="20dp"

        android:layout_toLeftOf="@+id/totalCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:hint="no calories"
        android:layout_above="@+id/delete_all"
        android:id="@+id/totalCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_margin="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_all" />

</RelativeLayout>